build: avoid non-srcdir installation failure (sitemap.html.in)
* docs/Makefile.am (EXTRA_DIST): Add sitemap.html.in.

--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -76,6 +76,7 @@ EXTRA_DIST=					\
   $(devhelphtml) $(devhelppng) $(devhelpcss) $(devhelpxsl) \
   $(xml) $(fig) $(png) \
   $(patches) \
+  sitemap.html.in \
   ChangeLog.awk
 
 CLEANFILES = $(dot_html) $(apihtml) $(devhelphtml)
