--- a/tools/virt-xml-validate.in
+++ b/tools/virt-xml-validate.in
@@ -134,8 +134,8 @@ Alternatively report bugs to your software distributor / vendor.
 
 =head1 COPYRIGHT
 
-Copyright 2009 by Red Hat, Inc
-Copyright 2009 by Daniel P. Berrange
+Copyright (C) 2009 by Red Hat, Inc
+Copyright (C) 2009 by Daniel P. Berrange
 
 =head1 LICENSE
 
