esx: Allow 'lsisas1068' as SCSI controller type
Extend tests to cover all SCSI controller types and document the
new type.

The lsisas1068 SCSI controller type was added in ESX 4.0. The VMX
parser reports an error when this controller type is present. This
makes virsh dumpxml fail for every domain that uses this controller
type.

This patch fixes this and adds lsisas1068 to the list of accepted
SCSI controller types.

Reported by Jonathan Kelley.

--- a/docs/drvesx.html.in
+++ b/docs/drvesx.html.in
@@ -282,6 +282,10 @@ ethernet0.checkMACAddress = "false"
         <dd>
             LSI Logic SCSI controller for recent guests.
         </dd>
+        <dt><code>lsisas1068</code></dt>
+        <dd>
+            LSI Logic SAS 1068 controller.
+        </dd>
     </dl>
     <p>
         Here a domain XML snippet:
