--- a/include/libvirt/libvirt.h.in
+++ b/include/libvirt/libvirt.h.in
@@ -29,6 +29,20 @@ extern "C" {
 # endif
 #endif /* VIR_DEPRECATED */
 
+#ifdef WIN32
+# ifdef LIBVIRT_STATIC
+#  define VIR_EXPORT_VAR extern
+# else
+#  ifdef IN_LIBVIRT
+#   define VIR_EXPORT_VAR __declspec(dllexport)
+#  else
+#   define VIR_EXPORT_VAR __declspec(dllimport) extern
+#  endif
+# endif
+#else
+# define VIR_EXPORT_VAR extern
+#endif
+
 /**
  * virConnect:
  *
@@ -499,7 +513,7 @@ struct _virConnectAuth {
 typedef struct _virConnectAuth virConnectAuth;
 typedef virConnectAuth *virConnectAuthPtr;
 
-extern virConnectAuthPtr virConnectAuthPtrDefault;
+VIR_EXPORT_VAR virConnectAuthPtr virConnectAuthPtrDefault;
 
 /**
  * VIR_UUID_BUFLEN:
