bootstrap: Enable copy-mode for MinGW builds
MSYS' ln doesn't work well in the way bootstrap uses it with relative paths.

--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -73,6 +73,12 @@ MSGID_BUGS_ADDRESS=libvir-list@redhat.com
 COPYRIGHT_HOLDER='Red Hat, Inc.'
 SKIP_PO=true
 
+# Enable copy-mode for MSYS/MinGW. MSYS' ln doesn't work well in the way
+# bootstrap uses it with relative paths.
+if test -n "$MSYSTEM"; then
+    copy=true
+fi
+
 # If "AM_GNU_GETTEXT(external" or "AM_GNU_GETTEXT([external]"
 # appears in configure.ac, exclude some unnecessary files.
 # Without grep's -E option (not portable enough, pre-configure),
